# Furniture-shop-backend

./: .gitignore  README.md  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 7cfa47ee640c_bootstrap_schema.py  9ce9546fa7c9_bootstrap_schema.py  a9483a8631d4_bootstrap_schema.py  d0db6e741715_bootstrap_schema.py
docs/: erd.mmd
src/: api.py  create_tables.py  exceptions.py  loggind.py  main.py
src/addresses/: controller.py  model.py  service.py
src/auth/: controller.py  model.py  service.py
src/database/: core.py
src/entities/: address.py  order.py  product.py  refresh_token.py  user.py
src/orders/: controller.py  model.py  service.py
src/products/: controller.py  model.py  service.py
src/scripts/: products.json  seed_products.py
src/users/: controller.py  model.py  service.py
test/: conftest.py  test_auth_service.py  test_order_service.py
