[project]
name = "furniture-shop-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "slowapi",
    "python-dotenv",
    "pyjwt",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "python-multipart",
    "email-validator",
    "passlib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "alembic"
]

[tool.ruff]
line-length = 100
target-version = "py312"
respect-gitignore = true
extend-exclude = ["alembic", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "TID", "PTH", "C4", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
